## ###########################################################################
## File:    Makefile.am
##
## Purpose: Automatically execute PDB2PQR on a long list of PDBs.
##
## Author:  Yong Huang
## ###########################################################################

SUBDIRS = .
CLEANFILES = ./out/*.*

test:
	./test.sh
